# __Khaos__

./: .clang-format  .codecov.yml  .codespellrc  .pre-commit-config.yaml  .pymarkdown.json  CMakeLists.txt  README.md  _architecture_8h.html  _architecture_8h.js  _architecture_8h_source.html  _c_8h.html  _c_8h.js  _c_8h_source.html  _c_standards_8h.html  _c_standards_8h.js  _c_standards_8h_source.html  _c_x_x_8h.html  _c_x_x_8h.js  _c_x_x_8h_source.html  _c_x_x_standards_8h.html  _c_x_x_standards_8h.js  _c_x_x_standards_8h_source.html  _compiler_8h.html  _compiler_8h.js  _compiler_8h_source.html  _features_8h.html  _features_8h.js  _features_8h_source.html  _language_8h.html  _language_8h.js  _language_8h_source.html  _library_8h.html  _library_8h.js  _library_8h_source.html  _o_s_8h.html  _o_s_8h.js  _o_s_8h_source.html  _platform_8h.html  _platform_8h.js  _platform_8h_source.html  (+42 more)
.github/workflows/: Codecov.yml  Docs.yml  Linux-Clang.yml  Linux-GCC.yml  MacOS-Clang.yml  MacOS-GCC.yml  Windows-MSVC.yml  Windows-MSYS2.yml  intel.yml  pre-commit  pre-commit.yml
.github/workflows/.env/: .env  .env.codecov  .env.docs
docs/: CMakeLists.txt  footer.tex  header.tex
include/khaos/: Architecture.h  C.h  CStandards.h  CXX.h  CXXStandards.h  Compiler.h  CompilerMacros.h  Features.h  Language.h  Languages.h  Library.h  OS.h  Platform.h  Pragma.h  Unix.h  VersionMacros.h  Warning.h
search/: all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_8.js  searchdata.js
src/: CMakeLists.txt
tests/: Architecture.test.cpp  CMakeLists.txt  CStandards.test.cpp  CXXStandards.test.cpp  Compiler.test.cpp  Features.test.cpp  LanguageC.test.c  LanguageCXX.test.cpp  Library.test.cpp  OS.test.cpp  Platform.test.cpp  Unix.test.cpp
