add_executable(CStandards.test CStandards.test.cpp)
set_target_properties(CStandards.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(CStandards.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(CStandards.test COMMAND CStandards.test ADD_LABELS "Test CStandards")
install(TARGETS CStandards.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(CXXStandards.test CXXStandards.test.cpp)
set_target_properties(CXXStandards.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(CXXStandards.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(CXXStandards.test COMMAND CXXStandards.test ADD_LABELS "Test CXXStandards")
install(TARGETS CXXStandards.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(LanguageC.test LanguageC.test.c)
set_target_properties(LanguageC.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(LanguageC.test PRIVATE Khaos::Khaos doctest_with_main)
add_test(NAME LanguageC.test COMMAND LanguageC.test)
install(TARGETS LanguageC.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(LanguageCXX.test LanguageCXX.test.cpp)
set_target_properties(LanguageCXX.test PROPERTIES CXX_STANDARD 11)
set_target_properties(LanguageCXX.test PROPERTIES CXX_STANDARD_REQUIRED TRUE)
set_target_properties(LanguageCXX.test PROPERTIES CXX_EXTENSIONS OFF)
set_target_properties(LanguageCXX.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(LanguageCXX.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(LanguageCXX.test COMMAND LanguageCXX.test ADD_LABELS "Test Language for CXX")
install(TARGETS LanguageCXX.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")
