add_executable(CStandards.test CStandards.test.cpp)
set_target_properties(CStandards.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(CStandards.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(CStandards.test COMMAND CStandards.test ADD_LABELS "Test CStandards")
install(TARGETS CStandards.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(CXXStandards.test CXXStandards.test.cpp)
set_target_properties(CXXStandards.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(CXXStandards.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(CXXStandards.test COMMAND CXXStandards.test ADD_LABELS "Test CXXStandards")
install(TARGETS CXXStandards.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(LanguageC.test LanguageC.test.c)
set_target_properties(LanguageC.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(LanguageC.test PRIVATE Khaos::Khaos doctest_with_main)
add_test(NAME LanguageC.test COMMAND LanguageC.test)
install(TARGETS LanguageC.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(LanguageCXX.test LanguageCXX.test.cpp)
set_target_properties(LanguageCXX.test PROPERTIES CXX_STANDARD 14)
set_target_properties(LanguageCXX.test PROPERTIES CXX_STANDARD_REQUIRED TRUE)
set_target_properties(LanguageCXX.test PROPERTIES CXX_EXTENSIONS TRUE)
set_target_properties(LanguageCXX.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(LanguageCXX.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(LanguageCXX.test COMMAND LanguageCXX.test ADD_LABELS "Test Language for CXX")
install(TARGETS LanguageCXX.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(Compiler.test Compiler.test.cpp)
set_target_properties(Compiler.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(Compiler.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(Compiler.test COMMAND Compiler.test ADD_LABELS "Test Compiler")
install(TARGETS Compiler.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(Architecture.test Architecture.test.cpp)
set_target_properties(Architecture.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(Architecture.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(Architecture.test COMMAND Architecture.test ADD_LABELS "Test Architecture")
install(TARGETS Architecture.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(OS.test OS.test.cpp)
set_target_properties(OS.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(OS.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(OS.test COMMAND OS.test ADD_LABELS "Test OS")
install(TARGETS OS.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(Platform.test Platform.test.cpp)
set_target_properties(Platform.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(Platform.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(Platform.test COMMAND Platform.test ADD_LABELS "Test Platform")
install(TARGETS Platform.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(Library.test Library.test.cpp)
set_target_properties(Library.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(Library.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(Library.test COMMAND Library.test ADD_LABELS "Test Library")
install(TARGETS Library.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")

add_executable(Unix.test Unix.test.cpp)
set_target_properties(Unix.test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/tests")
target_link_libraries(Unix.test PRIVATE Khaos::Khaos doctest_with_main)
doctest_discover_tests(Unix.test COMMAND Unix.test ADD_LABELS "Test Unix")
install(TARGETS Unix.test RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/tests")
